Bugs in handling of collections in queries and CompositeIndexDefinition were fixed.